--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-  
+<html lang="ko">
+  <head> 
+    <meta charset="utf-8"> 
+      <title>
+        CSS
+      </title> 
+      <link rel="stylesheet" href="./index.css" type="text/css"> 
+  </head>
   <title>
     Dreamin Note
   </title> 
