--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
   <head> 
     <meta charset="utf-8"> 
       <title>
-        CSS
+        jngsjn DreaminNote
       </title> 
       <link rel="stylesheet" href="./index.css" type="text/css"> 
   </head>
-  <title>
-    Dreamin Note
-  </title> 
+  <title>Dreamin Note</title> 
   <body>
-    html 어떻게 썼는지... 기억이 안나요...🧐
+   안녕하세요 여러분🙌
   </body>
-
 </html>
