--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <head> 
     <meta charset="utf-8"> 
       <title>
-        jngsjn DreaminNote
+       DreaminNote
       </title> 
-      <link rel="stylesheet" href="./index.css" type="text/css"> 
+    <link rel="stylesheet" href="./index.css" type="text/css"> 
   </head>
-  <title>Dreamin Note</title> 
+  <h1>
+    Dreamin Note
+  </h1>
   <body>
    안녕하세요 여러분🙌
   </body>
