--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
       </title> 
     <link rel="stylesheet" href="./index.css" type="text/css"> 
   </head>
-  <h1>
-    Dreamin Note
-  </h1>
+  
   <body>
+    <h1>Dreamin Note</h1>
    안녕하세요 여러분🙌
   </body>
 </html>
