--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   
   <body>
-    <h1>Dreamin Note</h1>
-   안녕하세요 여러분🙌
+    <h1>Dreamin Note📝</h1>
+    안녕하세요 여러분🙌<br>
+    <a=href="https://www.instagram.com/jng.sjn/">인스타그램</a>
   </body>
 </html>
