--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <h1>Dreamin Note📝</h1>
     안녕하세요 여러분🙌<br>
-    <button type="button" onclick="https://www.instagram.com/jng.sjn/">인스타그램</button>
+    <a href="https://www.instagram.com/jng.sjn/">인스타그램</a>
   </body>
 </html>
