--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1>Dreamin Note📝</h1>
     안녕하세요 여러분🙌<br>
-    <a href="https://www.instagram.com/jng.sjn/">인스타그램</a>
+    <button type="button" onclick="location.href =  'https://www.instagram.com/jng.sjn/';">
+      인스타그램
+    </button>
   </body>
 </html>
